--- a/docs/release/trg-2/trg-2-03.md
+++ b/docs/release/trg-2/trg-2-03.md
@@ -22,6 +22,7 @@ All repositories **MUST** contain the following files and folders:
 /docs
 /charts
 README.md
+<<other mandatory files from TRG 7.01>>
 ```
 
 All repositories **MUST** contain files required due to legal needs as defined in [TRG 7.01](../trg-7/trg-7-01)
@@ -29,6 +30,7 @@ All repositories **MUST** contain files required due to legal needs as defined i
 Recommended but optional:
 
 ```shell
+AUTHORS.md
 INSTALL.md
 ```
 
